@@ -1,11 +1,9 @@
 get_hz_data_from_pedon_db <- function(dsn) {
   # this can be optimized
   # RF calculation should be done in  a sub-query
-  q <- "SELECT pedon.peiid, phorizon.phiid, pedon.upedonid as pedon_id, phorizon.hzname, phorizon.hzdept, phorizon.hzdepb,
-  phorizon.claytotest as clay, phorizon.silttotest as silt, phorizon.sandtotest as sand, IIF(IsNULL(tx.choice), til.choice, tx.choice) as texture_class,     tmod.choice as texture_modifier, phfield, eff.choice AS effervescence, l.labsampnum, IIF(IsNULL(f.total_frags_pct), 0, f.total_frags_pct) AS total_frags_pct
+    q <- "SELECT pedon.peiid, phorizon.phiid, pedon.upedonid as pedon_id, phorizon.hzname, phorizon.hzdept, phorizon.hzdepb,
+  phorizon.claytotest as clay, phorizon.silttotest as silt, phorizon.sandtotest as sand, IIF(IsNULL(tx.choice), til.choice, tx.choice) as texture_class, phfield, eff.choice AS effervescence, l.labsampnum, IIF(IsNULL(f.total_frags_pct), 0, f.total_frags_pct) AS total_frags_pct
   FROM (
-  (
-  (
   (
   (
   (
@@ -16,8 +14,6 @@ get_hz_data_from_pedon_db <- function(dsn) {
   LEFT OUTER JOIN (SELECT phtiid, phiidref, texcl, lieutex FROM phtexture) as t ON phorizon.phiid = t.phiidref)
   LEFT OUTER JOIN (SELECT * FROM metadata_domain_detail WHERE metadata_domain_detail.domain_id = 189) AS tx ON t.texcl = tx.choice_id)
   LEFT OUTER JOIN (SELECT * FROM metadata_domain_detail WHERE metadata_domain_detail.domain_id = 192) AS til ON t.lieutex = til.choice_id)
-  LEFT OUTER JOIN (SELECT phtiidref, texmod FROM phtexturemod) as tm ON t.phtiid = tm.phtiidref)
-  LEFT OUTER JOIN (SELECT * FROM metadata_domain_detail WHERE metadata_domain_detail.domain_id = 190) AS tmod ON tm.texmod = tmod.choice_id)
   LEFT OUTER JOIN (SELECT * FROM metadata_domain_detail WHERE metadata_domain_detail.domain_id = 1255) AS eff ON phorizon.effclass = eff.choice_id
   ORDER BY pedon.upedonid, phorizon.hzdept ASC;"
   
@@ -25,7 +21,6 @@ get_hz_data_from_pedon_db <- function(dsn) {
   channel <- odbcConnectAccess(dsn, readOnlyOptimize=TRUE)
 
   # exec query
-  cat(paste('fetching from', dsn, '...\n'))
   d <- sqlQuery(channel, q, stringsAsFactors=FALSE)
 
   # close connection
